--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
     "main": "src/main.ts",
     "scripts": {
         "start": "ts-node src/main.ts",
+        "pg-watch": "pgtyped -w -c config.json",
+        "start-container": "docker stop squeal-forest && docker rm squeal-forest && docker run --name squeal-forest -d -p 5432:5432 squeal-forest",
+        "build-container": "docker build -t squeal-forest .",
+        "format": "npx prettier --write .",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "Dennis Loska",
     "license": "MIT",
     "dependencies": {
-        "@pgtyped/runtime": "^2.3.0",
-        "prettier": "^3.3.0",
-        "sqlite3": "^5.1.7",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.4.5"
+        "@pgtyped/runtime": "^2.3.0"
     },
     "devDependencies": {
-        "@pgtyped/cli": "^2.3.0"
+        "ts-node": "^10.9.2",
+        "@pgtyped/cli": "^2.3.0",
+        "prettier": "^3.3.0",
+        "typescript": "^5.4.5"
     }
 }
