--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
     "name": "squeal-forest",
+    "type": "module",
     "version": "1.0.0",
     "description": "You can squeal, but you can't hide!",
     "main": "src/main.ts",
     "scripts": {
-        "start": "ts-node src/main.ts",
-        "pg-watch": "pgtyped -w -c config.json",
-        "start-container": "docker stop squeal-forest && docker rm squeal-forest && docker run --name squeal-forest -d -p 5432:5432 squeal-forest",
-        "build-container": "docker build -t squeal-forest .",
+        "start": "npx vite-node src/main.ts",
+        "pg-watch": "npx pgtyped -w -c config.json",
+        "start-postgres": "docker stop squeal-forest || true && docker rm squeal-forest || true && docker run --name squeal-forest -d -p 5432:5432 squeal-forest",
+        "build-postgres": "docker stop squeal-forest || true && docker rm squeal-forest || true && docker build --no-cache -t squeal-forest .",
         "format": "npx prettier --write .",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -15,11 +16,12 @@
     "author": "Dennis Loska",
     "license": "MIT",
     "dependencies": {
-        "@pgtyped/runtime": "^2.3.0"
+        "@pgtyped/runtime": "^2.3.0",
+        "pg": "^8.11.5"
     },
     "devDependencies": {
-        "ts-node": "^10.9.2",
         "@pgtyped/cli": "^2.3.0",
+        "@types/pg": "^8.11.6",
         "prettier": "^3.3.0",
         "typescript": "^5.4.5"
     }
